--- a/index.html
+++ b/index.html
@@ -8,9 +8,17 @@
     <link rel="stylesheet" href="./output/tailwind.css">
 </head>
 
-<body>
-    <div class="w-32 h-32 bg-gray-900 m-12 text-white">
-        Hello
+<body class="h-screen flex items-center justify-center bg-gray-100">
+    <div class="max-w-sm mx-auto p-8 bg-white rounded-xl shadow-md space-y-2">
+        <img class="h-24 mx-auto rounded-full ring-1 ring-yellow-600" src="./images/logo.png" alt="logo">
+        <div class="text-center space-y-2">
+            <div class="space-x-0.5">
+                <p class="text-lg text-black font-semibold">Softpark-It</p>
+                <p class="text-gray-500 font-medium">Youtube Channel</p>
+            </div>
+            <button class="px-4 py-1 border border-purple-200 rounded-full text-sm font-semibold text-purple-600">Visit
+                Now</button>
+        </div>
     </div>
 </body>
 
