--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 
 <body class="h-screen flex items-center justify-center bg-gray-100">
-    <div class="max-w-sm mx-auto p-8 bg-white rounded-xl shadow-md space-y-2">
-        <img class="h-24 mx-auto rounded-full ring-1 ring-yellow-600" src="./images/logo.png" alt="logo">
+    <div
+        class="max-w-sm mx-auto p-8 bg-white rounded-xl shadow-md space-y-2 sm:flex sm:items-center sm:py-4 sm:space-y-0">
+        <img class="h-24 mx-auto rounded-full sm:mx-0 sm:flex-shrink-0" src="./images/logo.png" alt="logo">
         <div class="text-center space-y-2">
             <div class="space-x-0.5">
                 <p class="text-lg text-black font-semibold">Softpark-It</p>
