--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
 <body class="h-screen flex items-center justify-center bg-gray-100">
     <div
         class="max-w-sm mx-auto p-8 bg-white rounded-xl shadow-md space-y-2 sm:flex sm:items-center sm:py-4 sm:space-y-0">
-        <img class="h-24 mx-auto rounded-full sm:mx-0 sm:flex-shrink-0" src="./images/logo.png" alt="logo">
+        <img class="h-24 mx-auto rounded-full sm:mx-0 sm:flex-shrink-0 transform hover:scale-110 duration-500"
+            src="./images/logo.png" alt="logo">
         <div class="text-center space-y-2">
             <div class="space-x-0.5">
                 <p class="text-lg text-black font-semibold">Softpark-It</p>
                 <p class="text-gray-500 font-medium">Youtube Channel</p>
             </div>
-            <button class="px-4 py-1 border border-purple-200 rounded-full text-sm font-semibold text-purple-600">Visit
+            <button
+                class="px-4 py-1 border border-purple-200 rounded-full text-sm font-semibold text-purple-600 hover:text-white hover:bg-purple-600 hover:border-transparent focus:outline-none focus:ring-2 focus:ring-purple-600 focus:ring-offset-2">Visit
                 Now</button>
         </div>
     </div>
