--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
                 <p class="text-lg text-black font-semibold dark:text-white">Softpark-It</p>
                 <p class="text-gray-500 font-medium dark:text-white">Youtube Channel</p>
             </div>
-            <button
-                class="px-4 py-1 border border-purple-200 rounded-full text-sm font-semibold text-purple-600 hover:text-white hover:bg-purple-600 hover:border-transparent focus:outline-none focus:ring-2 focus:ring-purple-600 focus:ring-offset-2">Visit
-                Now</button>
+            <button class="btn btn-purple">Visit Now</button>
+            <button class="btn btn-green">Visit Now</button>
         </div>
     </div>
 </body>
