tailwind @layer derictive Understand done

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
             src="./images/logo.png" alt="logo">
         <div class="text-center space-y-2">
             <div class="space-x-0.5">
-                <p class="text-lg text-black font-semibold dark:text-white">Softpark-It</p>
-                <p class="text-gray-500 font-medium dark:text-white">Youtube Channel</p>
+                <h1 class="text-lg text-black font-semibold dark:text-white">Softpark-It</h1>
+                <p class="text-body text-gray-500 font-medium dark:text-white">Youtube Channel</p>
             </div>
-            <button class="btn btn-purple">Visit Now</button>
+            <button class="btn btn-purple rounded-sm">Visit Now</button>
             <button class="btn btn-green">Visit Now</button>
         </div>
     </div>
