tailwind @varients directive done

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="text-center space-y-2">
             <div class="space-x-0.5">
                 <h1 class="text-lg text-black font-semibold dark:text-white">Softpark-It</h1>
-                <p class="text-body text-gray-500 font-medium dark:text-white">Youtube Channel</p>
+                <p class="text-gray-500 font-medium dark:text-white hover:text-body">Youtube Channel</p>
             </div>
             <button class="btn btn-purple rounded-sm">Visit Now</button>
             <button class="btn btn-green">Visit Now</button>
